// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSimplifiedBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="ouiSimplifiedBreadcrumbs testClass1 testClass2 ouiSimplifiedBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <div
      class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Metazoans
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--collapsed"
  >
    <div
      class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          aria-label="Show collapsed breadcrumbs"
          class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb__collapsedLink"
          title="Show collapsed breadcrumbs"
          type="button"
        >
          … 
          <span
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <a
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <div
      class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Metazoans
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Chordates
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    >
      Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Tetrapods
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <a
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--collapsed"
  >
    <div
      class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          aria-label="Show collapsed breadcrumbs"
          class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb__collapsedLink"
          title="Show collapsed breadcrumbs"
          type="button"
        >
          … 
          <span
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <div
      class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Metazoans
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Chordates
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    >
      Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Tetrapods
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <a
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <div
      class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Metazoans
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--collapsed"
  >
    <div
      class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          aria-label="Show collapsed breadcrumbs"
          class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb__collapsedLink"
          title="Show collapsed breadcrumbs"
          type="button"
        >
          … 
          <span
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <a
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <div
      class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Metazoans
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--collapsed"
  >
    <div
      class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          aria-label="Show collapsed breadcrumbs"
          class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb__collapsedLink"
          title="Show collapsed breadcrumbs"
          type="button"
        >
          … 
          <span
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <a
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--collapsed"
  >
    <div
      class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          aria-label="Show collapsed breadcrumbs"
          class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb__collapsedLink"
          title="Show collapsed breadcrumbs"
          type="button"
        >
          … 
          <span
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <div
      class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <span
      aria-current="false"
      class="ouiSimplifiedBreadcrumb"
    >
      Metazoans
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--collapsed"
  >
    <div
      class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
    >
      <div
        class="ouiPopover__anchor"
      >
        <button
          aria-label="Show collapsed breadcrumbs"
          class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb__collapsedLink"
          title="Show collapsed breadcrumbs"
          type="button"
        >
          … 
          <span
            data-ouiicon-type="arrowDown"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--truncate"
  >
    <a
      class="ouiLink ouiLink--subdued ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
  <div
    class="ouiSimplifiedBreadcrumbWrapper ouiSimplifiedBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
    >
      Edit
    </span>
  </div>
  <div
    class="ouiBreadcrumbSeparator"
  />
</nav>
`;
